--- a/app/src/main/res/layout/fragment_worker_settings.xml
+++ b/app/src/main/res/layout/fragment_worker_settings.xml
@@ -74,8 +74,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:src="@drawable/ic_mode_edit_black_24dp"
-                        android:tint="@color/redSquareColor"
-                        android:visibility="gone" />
+                        android:tint="@color/redSquareColor" />
                 </RelativeLayout>
 
                 <View
