--- a/app/src/main/res/menu/menu_main_worker.xml
+++ b/app/src/main/res/menu/menu_main_worker.xml
@@ -19,6 +19,10 @@
             android:icon="@drawable/ic_share_black_24dp"
             android:title="@string/menu_worker_share" />
         <item
+            android:id="@+id/nav_worker_help"
+            android:icon="@drawable/ic_help_black_24dp"
+            android:title="@string/menu_worker_help" />
+        <item
             android:id="@+id/nav_worker_logout"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:title="@string/menu_worker_log_out" />
