--- a/app/src/main/res/layout/dialog_job_view_more.xml
+++ b/app/src/main/res/layout/dialog_job_view_more.xml
@@ -26,7 +26,7 @@
             android:id="@+id/job_details_description"
             android:textSize="14sp"
             app:josefin_style="italic"
-            android:textColor="@color/graySquareColor"
+            android:textColor="@color/blackSquareColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -45,7 +45,7 @@
             android:id="@+id/job_details_qualifications2"
             android:textSize="14sp"
             app:josefin_style="italic"
-            android:textColor="@color/graySquareColor"
+            android:textColor="@color/blackSquareColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -63,7 +63,7 @@
             android:id="@+id/job_details_qualifications"
             android:textSize="14sp"
             app:josefin_style="italic"
-            android:textColor="@color/graySquareColor"
+            android:textColor="@color/blackSquareColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -81,7 +81,7 @@
             android:id="@+id/job_details_english_level"
             android:textSize="14sp"
             app:josefin_style="italic"
-            android:textColor="@color/graySquareColor"
+            android:textColor="@color/blackSquareColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -100,7 +100,7 @@
             android:id="@+id/job_details_skills"
             android:textSize="14sp"
             app:josefin_style="italic"
-            android:textColor="@color/graySquareColor"
+            android:textColor="@color/blackSquareColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -118,7 +118,7 @@
             android:id="@+id/job_details_experience_types"
             android:textSize="14sp"
             app:josefin_style="italic"
-            android:textColor="@color/graySquareColor"
+            android:textColor="@color/blackSquareColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
@@ -136,7 +136,7 @@
             android:id="@+id/job_details_overtime"
             app:josefin_style="italic"
             android:textSize="14sp"
-            android:textColor="@color/graySquareColor"
+            android:textColor="@color/blackSquareColor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
