--- a/app/src/main/res/layout/item_job_worker.xml
+++ b/app/src/main/res/layout/item_job_worker.xml
@@ -170,7 +170,7 @@
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:id="@+id/item_job_start_date"
-                        style="@style/caption_gray_text"
+                        style="@style/caption_black_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="15dp"
@@ -191,7 +191,7 @@
 
                     <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                         android:id="@+id/item_job_location"
-                        style="@style/caption_gray_text"
+                        style="@style/caption_black_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="62dp"
