--- a/app/src/main/res/layout/job_list_item.xml
+++ b/app/src/main/res/layout/job_list_item.xml
@@ -123,7 +123,7 @@
                     android:tint="@color/redSquareColor" />
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/job_item_start_date"
-                    style="@style/caption_gray_text"
+                    style="@style/caption_black_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="15dp"
@@ -144,7 +144,7 @@
                     android:tint="@color/redSquareColor" />
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/job_item_work_place"
-                    style="@style/caption_gray_text"
+                    style="@style/caption_black_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
