--- a/app/src/main/res/layout/fragment_worker_settings.xml
+++ b/app/src/main/res/layout/fragment_worker_settings.xml
@@ -262,7 +262,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+               <!-- <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/social"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -274,7 +274,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@android:color/darker_gray" />
+                    android:background="@android:color/darker_gray" />-->
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:id="@+id/notify"
