--- a/app/src/main/res/layout/fragment_my_graftrs_stub.xml
+++ b/app/src/main/res/layout/fragment_my_graftrs_stub.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:layout_marginTop="2dp"
@@ -18,12 +19,27 @@
         android:layout_width="80dp"
         android:layout_height="80dp"/>
 
-    <View
+    <LinearLayout
         android:visibility="gone"
+        android:layout_gravity="center"
         android:layout_marginTop="80dp"
         android:id="@+id/no_matches"
-        android:layout_gravity="center"
-        android:background="@drawable/bob"
-        android:layout_width="140dp"
-        android:layout_height="140dp"/>
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
+            android:text="@string/employer_liked"
+            app:josefin_style="italic"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content" />
+
+        <View
+            android:layout_marginTop="12dp"
+            android:layout_gravity="center"
+            android:background="@drawable/bob"
+            android:layout_width="140dp"
+            android:layout_height="140dp"/>
+    </LinearLayout>
 </LinearLayout>
