--- a/app/src/main/res/layout/fragment_price_plan.xml
+++ b/app/src/main/res/layout/fragment_price_plan.xml
@@ -25,7 +25,8 @@
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:textColor="@android:color/white"
                 android:text="@string/employer_payments_plan_mine"
-                android:textSize="18sp"
+                android:textSize="16sp"
+                android:textAllCaps="true"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="12dp"
                 android:layout_gravity="center_vertical"
@@ -35,7 +36,7 @@
 
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:textColor="@android:color/white"
-                android:text="Bill due ..."
+                android:text="Renews on..."
                 android:textSize="14sp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="12dp"
@@ -48,6 +49,7 @@
 
         <!-- Divider -->
         <View
+            android:visibility="gone"
             android:layout_gravity="center_vertical"
             android:background="@color/graySquareColor"
             android:layout_width="1dp"
@@ -63,8 +65,9 @@
             <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                 android:textColor="@android:color/white"
                 android:text="@string/payments_basic"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:id="@+id/plan"
+                android:textAllCaps="true"
                 android:layout_marginRight="24dp"
                 android:layout_marginTop="12dp"
                 android:layout_gravity="center_vertical|end"
@@ -86,6 +89,7 @@
         </LinearLayout>
     </LinearLayout>
 
+    <!-- Main Content Pane -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -138,7 +142,7 @@
                         app:josefin_style="italic"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="18dp"
-                        android:layout_marginBottom="18dp"
+                        android:layout_marginBottom="4dp"
                         android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -148,11 +152,10 @@
                         android:textSize="12sp"
                         app:josefin_style="italic"
                         android:id="@+id/plan_expiration"
-                        android:layout_toRightOf="@+id/display_plan"
+                        android:layout_below="@+id/display_plan"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginLeft="18dp"
                         android:layout_marginBottom="18dp"
-                        android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -203,7 +206,7 @@
                         app:josefin_style="italic"
                         android:layout_gravity="center_vertical"
                         android:layout_marginLeft="18dp"
-                        android:layout_marginBottom="18dp"
+                        android:layout_marginBottom="4dp"
                         android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -213,11 +216,10 @@
                         android:textSize="12sp"
                         android:id="@+id/topup_expiration"
                         app:josefin_style="italic"
-                        android:layout_toRightOf="@+id/display_topups"
+                        android:layout_below="@+id/display_topups"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="8dp"
+                        android:layout_marginLeft="18dp"
                         android:layout_marginBottom="18dp"
-                        android:layout_marginTop="18dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -315,7 +317,6 @@
             <!-- Cancel -->
             <android.support.v7.widget.CardView
                 app:cardElevation="4dp"
-                android:id="@+id/cancel"
                 android:layout_marginRight="12dp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="12dp"
@@ -323,7 +324,7 @@
                 android:layout_height="wrap_content">
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
-                    android:text="@string/payments_cancel"
+                    android:text="@string/employer_payments_understanding"
                     android:textColor="@color/blackSquareColor"
                     android:textSize="18sp"
                     app:josefin_style="italic"
@@ -362,6 +363,7 @@
 
             <!-- Footer -->
             <LinearLayout
+                android:id="@+id/cancel"
                 android:layout_marginRight="12dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="24dp"
@@ -378,7 +380,7 @@
 
                 <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
                     android:textSize="14sp"
-                    android:text="@string/employer_payments_understanding"
+                    android:text="@string/payments_cancel"
                     app:josefin_style="italic"
                     android:layout_marginLeft="8dp"
                     android:layout_gravity="center_vertical"
