--- a/app/src/main/res/layout/fragment_alternative_pay.xml
+++ b/app/src/main/res/layout/fragment_alternative_pay.xml
@@ -13,7 +13,7 @@
         <!-- Title -->
         <com.hellobaytree.graftrs.shared.view.widget.JosefinSansTextView
             android:textColor="@color/redSquareColor"
-            android:textSize="16sp"
+            android:textSize="20sp"
             app:josefin_style="light"
             android:id="@+id/title"
             android:textAlignment="center"
@@ -44,7 +44,7 @@
                 android:layout_margin="24dp"
                 android:id="@+id/payments_plan_spinner"
                 android:layout_gravity="end|right"
-                android:layout_width="120dp"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"/>
         </android.support.v7.widget.CardView>
 
@@ -191,7 +191,9 @@
                 android:textColor="@color/redSquareColor"
                 android:textSize="16sp"
                 app:josefin_style="light"
-                android:layout_margin="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="24dp"
+                android:layout_marginLeft="24dp"
                 android:text="@string/payments_alt_subtitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -201,7 +203,9 @@
                 android:text="@string/payments_alt_note"
                 android:textColor="@color/redSquareColor"
                 android:textSize="16sp"
-                android:layout_margin="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="24dp"
+                android:layout_marginLeft="24dp"
                 app:josefin_style="italic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
