--- a/app/src/main/res/layout/map_marker_job.xml
+++ b/app/src/main/res/layout/map_marker_job.xml
@@ -151,7 +151,7 @@
                     android:text="Starts 18th Feb"
                     android:gravity="center"
                     android:layout_gravity="center_vertical"
-                    style="@style/caption_gray_text"
+                    style="@style/caption_black_text"
                     app:josefin_style="light"
                     android:paddingLeft="5dp"
                     android:paddingStart="5dp"
@@ -171,7 +171,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:layout_gravity="center_vertical"
-                    style="@style/caption_gray_text"
+                    style="@style/caption_black_text"
                     app:josefin_style="light"
                     android:paddingLeft="5dp"
                     android:paddingStart="5dp"
