--- a/app/src/main/res/layout/fragment_select_info_worker.xml
+++ b/app/src/main/res/layout/fragment_select_info_worker.xml
@@ -71,21 +71,37 @@
                 android:maxLines="1" />
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/zip_layout"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:hintEnabled="false">
+            android:layout_height="wrap_content">
 
-            <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
-                android:id="@+id/zip"
-                style="@style/square_edit_text"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/zip_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/sign_up_worker_step_personal_information_post_code_hint"
-                android:inputType="textCapWords"
-                android:maxLines="1" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_toLeftOf="@+id/zipSearch"
+                app:hintEnabled="false">
+
+                <com.hellobaytree.graftrs.shared.view.widget.JosefinSansEditText
+                    android:id="@+id/zip"
+                    style="@style/square_edit_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/sign_up_worker_step_personal_information_post_code_hint"
+                    android:inputType="textCapWords"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
+
+            <ImageView
+                android:id="@+id/zipSearch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_search_black_24dp"
+                android:tint="@color/redSquareColor" />
+        </RelativeLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/email_layout"
